Listing all contributors.

--- a/README
+++ b/README
@@ -36,7 +36,12 @@ If you want to file a bug report or a feature request, please do so here:
 
    http://github.com/znerd/uasniffer/issues
 
-This software has been developed by:
+This software has been developed by PensioenPage B.V., see:
 
+   https://www.pensioenpage.com/
+
+ Developers that contributed to the code:
+
+   Anthony Goubard    -  anthony.goubard@japplis.com
+   Mees Witteman      -  mees@wittemansoftware.nl
    Ernst de Haan      -  ernst@pensioenpage.com
-   PensioenPage B.V.  -  https://www.pensioenpage.com/
