Switched from Apache Ant to Maven.

--- a/README
+++ b/README
@@ -1,12 +1,11 @@
-NOTE: This library is not usable at the moment, it does not compile.
+NOTE: This library is not usable at the moment.
 ------------------------------------------------------------------------------
 
 This is uasniffer, a Java library for user agent sniffing. It analyzes a
 User-Agent header sent in an HTTP request and describes what kind of user
 agent this header indicates.
 
-The main class is the Sniffer class in the com.pensioenpage.jynx.uasniffer
-package.
+The main class is the Sniffer class in the org.znerd.uasniffer package.
 
 This utility program has no external dependencies other than the Java
 runtime environment, version 1.5 or higher.
@@ -14,26 +13,10 @@ runtime environment, version 1.5 or higher.
 This software requires the following to build (with 'ant jar'):
 
    - Java 1.5 or higher
-   - Ant 1.8.2 or higher
-
-To run the unit tests (using 'ant unittests'), the following libraries need to
-be in the classpath (or passed with 'ant -lib CLASSPATH'):
-
-   - ant-junit.jar    (tested with Ant 1.7.1)
-   - junit.jar        (tested with JUnit 4.0)
-   - commons-io.jar   (tested with Commons IO 1.4)
+   - Maven 3.0.2 or higher
 
 This software is available under the terms of a BSD-style license, see
 the accompanied LICENSE file.
-
-This task comes as a collection of Java source files that can be built with Ant.
-Just run:
-
-   ant
-
-The result will be a JAR file:
-
-   build/uasniffer.jar
 
 If you want to file a bug report or a feature request, please do so here:
 
