Added test for Firefox 4.0.1 on Mac OS X.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,4 +2,5 @@
 
 * Added support for RockMelt browser.
 * Added support for Chrome OS.
-* Added test for Chrome 12 agent string.
+* Added tests for several newer Chrome agent strings.
+* Added test for Firefox 4.0.1 on Mac OS X.
