--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,8 @@
 --- CHANGES SINCE UASNIFFER 0.2 ----------------------------------------------
 
-* Added support for RockMelt browser.
-* Added support for Chrome OS.
-* Added support for WebKit-based Flock releases.
+* Detecting RockMelt browser.
+* Detecting Chrome Frame engine inside MSIE.
+* Detecting Chrome OS.
+* Properly detecting WebKit-based Flock releases.
 * Supporting 4 levels in Flock versions.
-* Added tests for several newer Chrome agent strings.
-* Added test for Firefox 4.0.1 on Mac OS X.
+* Added unit tests for several newer browsers.
