--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@
 * Detecting Chrome Frame engine inside MSIE.
 * Detecting Chrome OS.
 * Detecting Windows 8.
+* Detecting iPad.
 * Properly detecting WebKit-based Flock releases.
 * Supporting 4 levels in Flock versions.
 * Added several agent strings for unit testing.
+* Changed "iPhoneOS" string to "iOS"
