--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,8 @@
 * Detecting Chrome OS.
 * Detecting Windows 8.
 * Detecting iPad.
-* Properly detecting WebKit-based Flock releases.
+* Detecting old NCSA Mosaic browsers
+* Properly detecting (newer) WebKit-based Flock releases.
 * Supporting 4 levels in Flock versions.
 * Added several agent strings for unit testing.
 * Changed "iPhoneOS" string to "iOS"
