Cleaned up the interface of the UserAgent class: made some methods package-private and documented the public ones.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,3 +14,4 @@
 * Supporting 4 levels in Flock versions.
 * Added several agent strings for unit testing.
 * Changed "iPhoneOS" string to "iOS"
+* Gave the interface of the UserAgent class an overhaul.
