--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,6 +3,7 @@
 * Added unit test for Firefox 5.
 * Added unit test for RockMelt 0.9.58.494.
 * Added unit test for Opera 11.50.
+* Added unit test for Maxthon 3.0 (changed sniffing code to make it work).
 
 
 --- CHANGES SINCE UASNIFFER 0.2 ----------------------------------------------
