--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,9 +1,11 @@
 --- CHANGES SINCE UASNIFFER 0.3 ----------------------------------------------
 
-* Added unit test for Firefox 5.
+* Added unit test for Firefox 5 beta.
+* Added unit test for Firefox 8 alpha 1.
 * Added unit test for RockMelt 0.9.58.494.
 * Added unit test for Opera 11.50.
 * Added unit test for Maxthon 3.0 (changed sniffing code to make it work).
+* Added unit test for iPad running iOS 3.2.
 
 
 --- CHANGES SINCE UASNIFFER 0.2 ----------------------------------------------
