--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,7 @@
 * Added unit test for Maxthon 3.0 (changed sniffing code to make it work).
 * Added unit test for iPad running iOS 3.2.
 * Added unit test for Safari 5.0.5 on Mac OS X 10.6.8.
+* Added unit test for Safari 5.1.0 on Mac OS X 10.7.
 
 
 --- CHANGES SINCE UASNIFFER 0.2 ----------------------------------------------
