--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,8 +8,10 @@
 * Added unit test for Opera 11.50.
 * Added unit test for Maxthon 3.0 (updated sniffing code).
 * Added unit test for iPad running iOS 3.2.
+* Added unit test for iPhone running iOS 4.3.3.
 * Added unit test for Safari 5.0.5 on Mac OS X 10.6.8.
 * Added unit test for Safari 5.1.0 on Mac OS X 10.7.
+* Slightly changed Safari detection code.
 
 
 --- CHANGES SINCE UASNIFFER 0.2 ----------------------------------------------
