Added unit test for Flock 3.5.3 on Mac OS X 10.6.6.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,7 @@
 * Added unit test for Safari 5.0.5 on Mac OS X 10.6.8.
 * Added unit test for Safari 5.1.0 on Mac OS X 10.7.
 * Added unit test for B&N Nook 1 e-reader device (updated sniffing code).
+* Added unit test for Flock 3.5.3 on Mac OS X 10.6.6.
 * Slightly changed Safari detection code.
 
 
