--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -16,6 +16,7 @@
 * Added unit test for Flock 0.4 on Mac OS X (PPC).
 * Added unit test for Flock 2.5.6 on Linux (x86-64).
 * Added unit test for Flock 3.5.3 on Mac OS X 10.6.6.
+* Added unit test for Chrome 12 on Mac OS X 10.7.0.
 * Improved unit test for Blackberry 9800.
 * Slightly changed Safari detection code.
 * Slightly improved Blackberry detection code.
