--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,6 +3,7 @@
 * Added dependency: znerd-util.
 * Refactored code and improved code style.
 * Added unit tests for older Netscape versions (updated sniffing code).
+* Added unit tests for IRIX OS version detection (updated sniffing code).
 
 
 --- CHANGES SINCE UASNIFFER 0.3 ----------------------------------------------
