--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,10 @@
 * Added unit tests for older Netscape versions (updated sniffing code).
 * Added unit tests for IRIX OS version detection (updated sniffing code).
 * Added unit test for Netscape 9.1 (updated sniffing code).
-* Added unit tests for Dolphin 2.0, one on Bada (updated sniffing code).
+* Added support for Bada OS.
+* Added unit tests for Dolphin 2.0.
+* Added support for Maemo OS.
+* Added unit tests for Fennec.
 
 
 --- CHANGES SINCE UASNIFFER 0.3 ----------------------------------------------
