Set version to 0.5-SNAPSHOT.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+--- CHANGES SINCE UASNIFFER 0.5 ----------------------------------------------
+
+
 --- CHANGES SINCE UASNIFFER 0.4 ----------------------------------------------
 
 * Added dependency: znerd-util.
