--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+--- CHANGES SINCE UASNIFFER 0.6 ----------------------------------------------
+
+* Added unit test for iPhone with iOS 5.1.
+
+
 --- CHANGES SINCE UASNIFFER 0.5 ----------------------------------------------
 
 * Upgraded dependency on znerd-util from 0.5 to 0.6.
