--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,4 @@
---- CHANGES SINCE UASNIFFER 0.7 ----------------------------------------------
+--- CHANGES SINCE UASNIFFER 1.0 (July 21, 2012) ------------------------------
 
 * Added parent POM: znerd-oss-parent v2.
 * Upgraded dependency on maven-compiler-plugin from 2.3.2 to 2.5.1.
