Changed POM coordinates from org.znerd.uasniffer:uasniffer to org.znerd:uasniffer.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,7 @@
 * Upgraded dependency on maven-compiler-plugin from 2.3.2 to 2.5.1.
 * Upgraded dependency on znerd-util from 0.6 to 0.7.
 * Removed 'distributionManagement' section from POM.
+* POM Coordinates: org.znerd.uasniffer:uasniffer -> org.znerd:uasniffer.
 
 
 --- CHANGES SINCE UASNIFFER 0.6 (March 24, 2012) -----------------------------
