--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,4 @@
+Update license to include Ernst de Haan.
+Update POM to introduce inceptionYear.
 Introduce Browser-DesktopFirefox
 Change Browser-Fennec to Browser-MobileFirefox (and add Browser-Firefox)
