--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,11 @@
 --- CHANGES SINCE UASNIFFER 1.1 (under development) --------------------------
 
-* Added unit test for Maxthon 1.0 beta on Mac (OS X 10.8).
-* Added unit test for Firefox 14.0 on Mac (OS X 10.7).
+* Improved support for Nook E-readers.
 * Upgraded dependency on znerd-util from 0.7 to 0.8.
 * Refactored unit tests, now using PolySuite-approach.
 * Added knowledge: Nook 1.0 is an Android device.
+* Added unit test for Maxthon 1.0 beta on Mac (OS X 10.8).
+* Added unit test for Firefox 14.0 on Mac (OS X 10.7).
 
 
 --- CHANGES SINCE UASNIFFER 1.0 (July 21, 2012) ------------------------------
