--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,7 @@
 --- CHANGES SINCE UASNIFFER 1.1 (under development) --------------------------
 
 * Added unit test for Maxthon 1.0 beta on Mac (OS X 10.8).
+* Added support for Sony PlayStation (Vita).
 
 
 --- CHANGES SINCE UASNIFFER 1.0 (July 21, 2012) ------------------------------
