--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+--- CHANGES SINCE UASNIFFER 1.2 (under development) --------------------------
+
+
+
 --- CHANGES SINCE UASNIFFER 1.1 (August 25, 2012) ----------------------------
 
 * Added support for Amazon Kindle Fire.
