--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,7 @@
 * Added unit test for OmniWeb 4.2.1.
 * Added unit test for Firefox 15 on Mac OS X 10.8.
 * Added unit test for Konqueror 4.5 on FreeBSD.
+* Added unit test for Chromium 18 on Linux.
 
 
 --- CHANGES SINCE UASNIFFER 1.1 (August 25, 2012) ----------------------------
