--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -15,6 +15,7 @@
 * Added unit test for Internet Explorer 10 on Windows 8.
 * Added unit test for Internet Explorer 10 Compatibility Mode on Windows 8.
 * Added unit test for Firefox 14 on Firefox OS. Had to apply a small fix.
+* Added unit test for Opera 12.50 on Mac OS X 10.8.0.
 
 
 --- CHANGES SINCE UASNIFFER 1.1 (August 25, 2012) ----------------------------
