--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -18,6 +18,7 @@
 * Added unit test for Opera 12.50 on Mac OS X 10.8.0.
 * Added unit test for Opera 11.66 on Mac OS X 10.8.1.
 * Added unit test for Opera 12.02 on Mac OS X 10.8.1.
+* Added unit test for Camino 2.1.2 on Mac OS X 10.8.1.
 
 
 --- CHANGES SINCE UASNIFFER 1.1 (August 25, 2012) ----------------------------
