--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -25,6 +25,7 @@
 * Added unit test for Opera 11.66 on Mac OS X 10.8.1.
 * Added unit test for Opera 12.02 on Mac OS X 10.8.1.
 * Added unit test for Camino 2.1.2 on Mac OS X 10.8.1.
+* Removed TODO comments related to locales.
 
 
 --- CHANGES SINCE UASNIFFER 1.1 (August 25, 2012) ----------------------------
