Added unit test for Netscape 8.1 on Windows XP.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,7 @@
 * Added unit test for Opera 8.5 masquerading as MSIE 6.0.
 * Added unit test for Opera 9.2 on Windows Vista.
 * Added unit test for Opera Mini 10.54. Required change to sniffer.
+* Added unit test for Netscape 8.1 on Windows XP.
 
 
 --- CHANGES SINCE UASNIFFER 1.2 (September 3, 2012) --------------------------
