--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,7 @@
 * Added unit test for Opera Mini 9.80. Required change to sniffer.
 * Added unit test for Netscape 8.1 on Windows XP.
 * Added unit test for Opera 7.02 on Windows XP masquerading as MSIE 5.5/6.0.
+* Added unit test for RockMelt 0.16 on Mac OS X 10.8.1.
 
 
 --- CHANGES SINCE UASNIFFER 1.2 (September 3, 2012) --------------------------
