Added 3 unit tests.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,10 +4,12 @@
 * Removed dead code from Sniffer class.
 * Fixed issue detecting Opera Mini 9.80.
 * Added unit tests for:
-  - Firefox 16 on Mac OS X 10.8.x.
-  - Firefox 19 on Mac OS X 10.8.x.
+  - Internet Explorer 10 on Windows 8 64-bit.
+  - WPF application on Windows 8.
+  - Firefox 16 on OS X 10.8.x.
+  - Firefox 19 on OS X 10.8.x.
   - Fennec 9.0 (Firefox Mobile) on Android.
-  - Opera 12.10 (prerelease) on Mac OS X 10.8.1.
+  - Opera 12.10 (prerelease) on OS X 10.8.1.
   - Opera 8.0 masquerading as MSIE 6.0.
   - Opera 8.5 masquerading as MSIE 6.0.
   - Opera 9.2 on Windows Vista.
@@ -16,16 +18,17 @@
   - Opera Mini 9.80.
   - Netscape 8.1 on Windows XP.
   - Opera 7.02 on Windows XP masquerading as MSIE 5.5/6.0.
-  - Rockmelt 0.9.72 on Mac OS X 10.8.2.
+  - Rockmelt 0.9.72 on OS X 10.8.2.
   - RockMelt 2.1 browser on iPhone running iOS 6.0.1.
-  - RockMelt 0.16 on Mac OS X 10.8.1.
+  - RockMelt 0.16 on OS X 10.8.1.
   - RockMelt 0.16 on Windows 7.
   - RockMelt 0.16 on Windows 8.
   - Konqueror 4.8 on Windows.
   - Konqueror 4.8 on Fedora 17.
-  - Web browser inside Eclipse on Mac OS X 10.8.1.
-  - Sleipnir 3.8.4.1 on Mac OS X 10.8.2.
-  - Opera 12.13 on Mac OS X 10.8.2.
+  - Web browser inside Eclipse on OS X 10.8.1.
+  - Sleipnir 3.8.4.1 on OS X 10.8.2.
+  - Sleipnir 4.1 on OS X 10.8.2.
+  - Opera 12.13 on OS X 10.8.2.
 
 
 --- CHANGES SINCE UASNIFFER 1.2 (September 3, 2012) --------------------------
@@ -37,7 +40,7 @@
 * Added unit test for Sleipnir 2.8.1 on Windows XP.
 * Added unit test for Sleipnir 2.8.4 on Windows XP.
 * Added unit test for Sleipnir 2.9.9 on Windows Vista.
-* Added unit test for Sleipnir 3.7 on Mac OS X 10.8.1.
+* Added unit test for Sleipnir 3.7 on OS X 10.8.1.
 * Now detecting Tasman rendering engine (MSIE 5 on Mac).
 * Added unit test for Internet Explorer 5.0 on Mac PPC.
 * Added unit test for Internet Explorer 5.0 on Mac OS X.
@@ -55,11 +58,11 @@
 * Added unit test for Internet Explorer 10 on Windows 8.
 * Added unit test for Internet Explorer 10 Compatibility Mode on Windows 8.
 * Added unit test for Firefox 14 on Firefox OS. Had to apply a small fix.
-* Added unit test for Firefox 15 on Mac OS X 10.8.
-* Added unit test for Opera 11.66 on Mac OS X 10.8.1.
-* Added unit test for Opera 12.02 on Mac OS X 10.8.1.
-* Added unit test for Opera 12.50 on Mac OS X 10.8.0.
-* Added unit test for Camino 2.1.2 on Mac OS X 10.8.1.
+* Added unit test for Firefox 15 on OS X 10.8.
+* Added unit test for Opera 11.66 on OS X 10.8.1.
+* Added unit test for Opera 12.02 on OS X 10.8.1.
+* Added unit test for Opera 12.50 on OS X 10.8.0.
+* Added unit test for Camino 2.1.2 on OS X 10.8.1.
 * Removed TODO comments related to locales.
 
 
