--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,10 @@
+--- CHANGES SINCE UASNIFFER 1.4 (under development) --------------------------
+
+* Added unit tests for:
+  - Chrome 28 on OS X 10.8.2.
+  - RockMelt 0.16 on OS X 10.8.2.
+
+
 --- CHANGES SINCE UASNIFFER 1.3 (under development) --------------------------
 
 * Unit testing Sniffer constructor now (must be private).
