--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,6 +3,7 @@
 * Added unit tests for:
   - Chrome 28 on OS X 10.8.2.
   - RockMelt 0.16 on OS X 10.8.2.
+  - Maxthon 4.0.4 on OS X 10.8.2.
 
 
 --- CHANGES SINCE UASNIFFER 1.3 (April 16, 2013) -----------------------------
