--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -11,6 +11,7 @@
   - IE Mobile 7.0 on Windows Phone 7.0.
   - IE Mobile 9.0 on Windows Phone 7.5 (Samsung Focus).
   - IE Mobile 10.0 on Windows Phone 8.0 (Nokia Lumia 520).
+  - IE Mobile 10.0 on Windows Phone 8.0 (Nokia Lumia 920).
 * Additionally, added unit tests for:
   - Mobile WebKit browser inside 1Password app on iPad.
   - MSIE 6.0 with Chrome Frame 11.0 extension.
