--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,7 +8,7 @@
   - Opera 15 pre-release on OS X 10.8.3 (using Blink).
   - Opera 15 pre-release on Windows Vista (using Blink).
 * Detecting Windows Phone, added unit tests for:
-  - IE Mobile 7.0 on Windows Phone 7.0.
+  - IE Mobile 7.0 on Windows Phone 7.0 (LG phone + Samsung Focus).
   - IE Mobile 9.0 on Windows Phone 7.5 (Samsung Focus).
   - IE Mobile 10.0 on Windows Phone 8.0 (Nokia Lumia 520).
   - IE Mobile 10.0 on Windows Phone 8.0 (Nokia Lumia 920).
