--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,7 +7,7 @@
   - Opera 15 pre-release on OS X 10.8.3 (using Blink).
   - Opera 15 pre-release on Windows Vista (using Blink).
 * Detecting Windows Phone, added unit tests for:
-  - IE Mobile 7.0 on Windows Phone 7.0 (LG phone, Samsung Focus, Nokia N70).
+  - IE Mobile 7.0 on Windows Phone 7.0 (LG, Samsung Focus, Nokia N70/800/900).
   - IE Mobile 9.0 on Windows Phone 7.5 (Samsung Focus).
   - IE Mobile 10.0 on Windows Phone 8.0 (Nokia Lumia 520/820/920).
 * Detecting Windows RT, added unit tests for:
