--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -21,6 +21,7 @@
   - RockMelt 0.16 on OS X 10.8.2.
   - Maxthon 4.0.4 on OS X 10.8.2.
   - Microsoft Surface Pro tablet, running IE 10 on Windows 8.
+  - Nokia Lumia 800/900 with desktop version turned on in settings.
 
 
 --- CHANGES SINCE UASNIFFER 1.3 (April 16, 2013) -----------------------------
