--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -23,6 +23,8 @@
   - Maxthon 4.0.4 on OS X 10.8.2.
   - Microsoft Surface Pro tablet, running IE 10 on Windows 8.
   - Nokia Lumia 800/900 with desktop version turned on in settings.
+* Upgraded dependency on znerd-util to 0.10.
+* Upgraded dependency on junit to 4.11.
 
 
 --- CHANGES SINCE UASNIFFER 1.3 (April 16, 2013) -----------------------------
