--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,7 @@
---- CHANGES SINCE UASNIFFER 1.4 (July 6, 2013) -------------------------------
+--- CHANGES INTRODUCED IN UASNIFFER 1.5 (UNDER DEVELOPMENT) ------------------
+
+
+--- CHANGES INTRODUCED IN UASNIFFER 1.4 (July 6, 2013) -----------------------
 
 * Improved detection of mobile WebKit browser version.
 * Detecting Chrome Frame agent string on subrequests now, added unit test for:
@@ -27,7 +30,7 @@
 * Upgraded dependency on junit to 4.11.
 
 
---- CHANGES SINCE UASNIFFER 1.3 (April 16, 2013) -----------------------------
+--- CHANGES INTRODUCED IN UASNIFFER 1.3 (April 16, 2013) ---------------------
 
 * Now recognizing IE 11 on Windows Blue (based on leaked preliminary agent string).
 * Fixed issue detecting Opera Mini 9.80.
@@ -64,7 +67,7 @@
   - Opera 12.13 on OS X 10.8.2.
 
 
---- CHANGES SINCE UASNIFFER 1.2 (September 3, 2012) --------------------------
+--- CHANGES INTRODUCED IN UASNIFFER 1.2 (September 3, 2012) ------------------
 
 * Introduced 'BrowserEngine-Trident-MSIE' (with versions) to make it possible
   to detect browsers that render with the same engine as MSIE version X. 
@@ -99,7 +102,7 @@
 * Removed TODO comments related to locales.
 
 
---- CHANGES SINCE UASNIFFER 1.1 (August 25, 2012) ----------------------------
+--- CHANGES INTRODUCED IN UASNIFFER 1.1 (August 25, 2012) --------------------
 
 * Added support for Amazon Kindle Fire.
 * Added support for Sony PlayStation Portable (PSP) devices.
@@ -113,7 +116,7 @@
 * Upgraded dependency on znerd-util from 0.7 to 0.8.
 
 
---- CHANGES SINCE UASNIFFER 1.0 (July 21, 2012) ------------------------------
+--- CHANGES INTRODUCED IN UASNIFFER 1.0 (July 21, 2012) ----------------------
 
 * Added parent POM: znerd-oss-parent v2.
 * Upgraded dependency on maven-compiler-plugin from 2.3.2 to 2.5.1.
@@ -122,7 +125,7 @@
 * POM Coordinates: org.znerd.uasniffer:uasniffer -> org.znerd:uasniffer.
 
 
---- CHANGES SINCE UASNIFFER 0.6 (March 24, 2012) -----------------------------
+--- CHANGES INTRODUCED IN UASNIFFER 0.6 (March 24, 2012) ---------------------
 
 * Added unit test for iPhone with iOS 5.1.
 * Improved Android detection.
@@ -131,13 +134,13 @@
 * Fixed a bug in the detection of the Chrome Frame plugin.
 
 
---- CHANGES SINCE UASNIFFER 0.5 ----------------------------------------------
+--- CHANGES INTRODUCED IN UASNIFFER 0.5 --------------------------------------
 
 * Upgraded dependency on znerd-util from 0.5 to 0.6.
 * Upgraded plugin versions.
 
 
---- CHANGES SINCE UASNIFFER 0.4 ----------------------------------------------
+--- CHANGES INTRODUCED IN UASNIFFER 0.4 --------------------------------------
 
 * Added dependency: znerd-util.
 * Refactored code and improved code style.
@@ -153,7 +156,7 @@
 * Added unit test for Samsung Galaxy Tab tablet.
 
 
---- CHANGES SINCE UASNIFFER 0.3 ----------------------------------------------
+--- CHANGES INTRODUCED IN UASNIFFER 0.3 --------------------------------------
 
 * Added unit tests for Amazon Kindle devices (updated sniffing code).
 * Added unit test for Firefox 5 beta.
@@ -177,7 +180,7 @@
 * Slightly improved Blackberry detection code.
 
 
---- CHANGES SINCE UASNIFFER 0.2 ----------------------------------------------
+--- CHANGES INTRODUCED IN UASNIFFER 0.2 --------------------------------------
 
 * Detecting RockMelt browser.
 * Detecting Chrome Frame engine inside MSIE.
