Added unit test for Firefox 22 on Windows 8.1 Preview.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,7 @@
 
 * Added unit tests for:
   - Opera 15 on Windows 8.1 Preview.
+  - Firefox 22 on Windows 8.1 Preview.
 
 
 --- CHANGES INTRODUCED IN UASNIFFER 1.5 (July 6, 2013) -----------------------
