--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,6 +3,7 @@
 * Added unit tests for:
   - Opera 15 on Windows 8.1 Preview.
   - Firefox 22 on Windows 8.1 Preview.
+  - Chrome Canary 30 (July 6, 2013) on OS X 10.8.4.
 
 
 --- CHANGES INTRODUCED IN UASNIFFER 1.5 (July 6, 2013) -----------------------
